@@ -62,15 +62,15 @@ public class Validation {
     }
 
     public void addArgument(int arg) {
-        arguments.add(new Integer(arg));
+        arguments.add(Integer.valueOf(arg));
     }
 
     public void addArgument(boolean b) {
-        arguments.add(new Boolean(b));
+        arguments.add(Boolean.valueOf(b));
     }
 
     public void addArgument(float arg) {
-        arguments.add(new Float(arg));
+        arguments.add(Float.valueOf(arg));
     }
 
     /*
